[project]
name = "unittest-learning"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.3.4",
]

[[tool.uv.index]]
url = "https://pypi.org/pypi/simple"
default = true

[dependency-groups]
dev = [
    "mkdocs-material>=9.6.5",
    "mkdocstrings[python]>=0.28.1",
]
